--- a/school/templates/base_template.html
+++ b/school/templates/base_template.html
@@ -37,7 +37,7 @@
     {% block content %}<!-- default content text (typically empty) -->{% endblock %}
     
       <img src="/static/attendance_img.png" alt="Attendance" class="rounded mx-auto d-block">
-
+<br/> <br/>
       <!-- footer  -->
       <div class="container">
       <footer class="bg-light text-center text-lg-start ">
@@ -80,8 +80,8 @@
       
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2020 Copyright:
-          <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+          © 2021 Copyright:
+          <a class="text-dark" href="/home">Attendance Tracking Application</a>
         </div>
         <!-- Copyright -->
       </footer>
