updated attendance page

--- a/school/templates/attendanceAdded.html
+++ b/school/templates/attendanceAdded.html
@@ -5,8 +5,8 @@
   <p>Attendace added successfully </p> <br/>
 
 </div> <br/>
-  <p>you clicked course {{ course }}. and you are  {{ student }}. </p>
-
+  
+<div class="container">
   <a href="/student">    Click here to view your dashboard page.</a>
 </div>
 <br/><br/><br/><br/>
