--- a/school/templates/courses.html
+++ b/school/templates/courses.html
@@ -19,12 +19,12 @@
      <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">id</th>
+            <th scope="col">Course Id</th>
             <th scope="col">Name</th>
             <th scope="col">Credit</th>
-            <th scope="col">classStartDate</th>
-            <th scope="col">classEndDate</th>
-            <th scope="col">sectionName</th>
+            <th scope="col">Class Start Date</th>
+            <th scope="col">Class End Date</th>
+            <th scope="col">Section Name</th>
           </tr>
         </thead>
         <tbody>
