--- a/school/templates/attendanceAdded.html
+++ b/school/templates/attendanceAdded.html
@@ -1,13 +1,10 @@
-{% extends "base_template.html" %}
-
-{% block content %}
+{% extends "base_template.html" %} {% block content %}
 <div class="container d-flex justify-content-center">
-  <p>Attendace added successfully </p> <br/>
-
-</div> <br/>
-  
-<div class="container">
-  <a href="/student">    Click here to view your dashboard page.</a>
-</div>
-<br/><br/><br/><br/>
-{% endblock %}
+	<p>Attendace added successfully </p>
+	<br/> </div>
+<br/>
+<div class="container"> <a href="/student">    Click here to view your dashboard page.</a> </div>
+<br/>
+<br/>
+<br/>
+<br/> {% endblock %}
