--- a/school/templates/base_template.html
+++ b/school/templates/base_template.html
@@ -14,7 +14,7 @@
 				<ul class="navbar-nav mr-auto">
 					<li>
 						<a href='/home'>
-							<button class="btn btn-primary my-2 my-sm-0" type="submit">Application Tracking System</button>
+							<button class="btn btn-primary my-2 my-sm-0" type="submit">Attendance Tracking System</button>
 						</a>
 					</li>
 					<li class="nav-item active"> <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a> </li>
