--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -68,7 +68,12 @@
                     <!-- <input type="hidden" name="course11" value="coursehardcoded" /> -->
                     <input type="hidden" name="student" value="{{attendace.student}}" />
                     <input type="hidden" name="course" value="{{attendace.course}}" />
-                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button>
+                    {% if canIModifyAttendance %}
+                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add - can be added-{{attendace.course}}-{{attendace.student}}</button> 
+                     {% else %}
+                     <button  class="btn btn-primary my-2 my-sm-0 my-add-button disabled"  type="submit" name="add" value="Add">Add can not be added-{{attendace.course}}-{{attendace.student}}</button> 
+                     {% endif %}
+                    <!-- <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button> -->
                   </form>
                   </td>
                </tr>
@@ -90,6 +95,7 @@
 
 $(function() {
   // if condition only call this if attendance for today is not done
+
   $(".my-add-button").prop("disabled", false);
 });
 
