updated assigned teacher

--- a/school/templates/courses.html
+++ b/school/templates/courses.html
@@ -25,6 +25,7 @@
             <th scope="col">Class Start Date</th>
             <th scope="col">Class End Date</th>
             <th scope="col">Section Name</th>
+            <th scope="col">Assigned Teacher</th>
           </tr>
         </thead>
         <tbody>
@@ -38,6 +39,7 @@
             <td>{{course.classStartDate}}</td>
             <td>{{course.classEndDate}}</td>
             <td>{{course.sectionName}}</td>
+            <td>{{course.teacher}}</td>
           </tr>
     
           {% endfor %}
