calculating business days

--- a/school/templates/viewDetailedAtendance.html
+++ b/school/templates/viewDetailedAtendance.html
@@ -35,5 +35,7 @@ Detailed Attendance for student {{student}} and course {{course}}
     
     
                 </tr> {% endif %} {% endif %} {% endfor %} </tbody>
-        </table></div>
+        </table>
+    
+    <a href = "/student"> go to students main page</a></div>
 </div> {% endblock %}
