--- a/school/templates/viewDetailedAtendance.html
+++ b/school/templates/viewDetailedAtendance.html
@@ -21,7 +21,7 @@ Detailed Attendance for student {{student}} and course {{course}}
 
                 <tr> {% for eachRecord in listofAttendanceRecord %}
                    
-                    <th scope="row">{{eachRecord.studentName}}</th>
+                    <th scope="row">{{eachRecord.courseName}}</th>
                     <td>{{eachRecord.studentName}}</td>
                     <td>{{eachRecord.attendanceDate}}</td>
                     <td>{{eachRecord.isPresent}}</td>
