--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -14,6 +14,8 @@
 				<th scope="col">courseCredit</th>
 				<th scope="col">totalAttendacePercent</th>
 				<th scope="col">uptoTodayAttendancePercent</th>
+				<th scope="col">Add Todays Attendance</th>
+				<th scope="col">View Breakdown</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -29,6 +31,35 @@
 				<td>{{eachClass.totalAttendaceDays}} / {{eachClass.uptoTodaySchoolDays}}
 					({% widthratio eachClass.totalAttendaceDays eachClass.uptoTodaySchoolDays 100 %}%)
 				</td>
+
+				<td>
+					<form action="add/" method="POST" id="buttonForm"> {% csrf_token %}
+						<!-- <input type="hidden" name="course" value="{{attendace.course}}" /> -->
+						<!-- <input type="hidden" name="course11" value="coursehardcoded" /> -->	
+						<input type="hidden" name="student" value="{{user.username}}" />
+						<input type="hidden" name="course" value="{{eachClass.courseName}}" /> {% now "Y-m-d" as todays_date %} 
+						{% if isSchoolDayToday %}
+						<button class="btn btn-warning my-2 my-sm-0 " type="submit" name="add" value="Add" disabled>off today</button> 
+						{% elif attendace.modified_date|date:"Y-m-d" != todays_date %}
+						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="Add">Add todays attendance</button> {% else %}
+						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="Add" disabled>Already Add</button> {% endif %}
+						<!-- <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button> -->
+					</form>
+				</td>
+
+				<!-- view button  -->
+				<td>
+					<form action="view/" method="POST" id="buttonViewForm"> {% csrf_token %}
+						<!-- <input type="hidden" name="course" value="{{attendace.course}}" /> -->
+						<!-- <input type="hidden" name="course11" value="coursehardcoded" /> -->
+						<input type="hidden" name="student" value="{{user.username}}" />
+						<input type="hidden" name="course" value="{{eachClass.courseName}}" /> 
+						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="view">View</button> 
+						
+						<!-- <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button> -->
+					</form>
+				</td>
+
 			</tr> {% endfor %} </tbody>
 	</table> {% else %}
 	<p></p> {% endif %} </div>
@@ -69,7 +100,7 @@
 						<input type="hidden" name="student" value="{{attendace.student}}" />
 						<input type="hidden" name="course" value="{{attendace.course}}" /> {% now "Y-m-d" as todays_date %} {% if attendace.modified_date|date:"Y-m-d" != todays_date %}
 						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="Add">Add</button> {% else %}
-						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="Add" disabled>Add</button> {% endif %}
+						<button class="btn btn-primary my-2 my-sm-0 " type="submit" name="add" value="Add" disabled>Already Added</button> {% endif %}
 						<!-- <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button> -->
 					</form>
 				</td>
