update istodays attendance

--- a/school/templates/attendanceAdded.html
+++ b/school/templates/attendanceAdded.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %} {% block content %}
 <div class="container d-flex justify-content-center">
-	<p>Attendace added successfully </p>
+	<p>Attendace added for student {{student}} , course {{course }} for date - {{todaysDate}} successfully </p>
 	<br/> </div>
 <br/>
 <div class="container"> <a href="/student">    Click here to view your dashboard page.</a> </div>
