--- a/school/templates/base_template.html
+++ b/school/templates/base_template.html
@@ -35,9 +35,11 @@
 					<li class="nav-item"> <a class="nav-link" href="/courses">Courses</a> </li>
 					<li class="nav-item"> <a class="nav-link disabled" href="#">Contact</a> </li>
 				</ul>
-				<a href='/logout'>
-					<button class="btn btn-warning my-2 my-sm-0" type="submit">Logout</button>
+				{% if user.is_authenticated %}
+					<a href="{% url 'logout' %}"><button class="btn btn-warning my-2 my-sm-0" type="submit">Logout</button></a>
+					
 				</a>
+				{% endif %}
 			</div>
 		</nav>
 	</div> {% block sidebar %}
