--- a/school/templates/viewCourse.html
+++ b/school/templates/viewCourse.html
@@ -5,7 +5,7 @@
 <div class = "container">
   
   <br/> <br/> <br/>
-       
+       courseName = {{courseName}}
        <table class="table table-striped">
           <thead>
             <tr>
